--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,5 +13,6 @@
             {{ content }}
         </div>
         {% include footer.html %}
+        <script type="module" src="assets/js/news_feed.js"></script>
     </body>
 </html>
